The dev tun value is needed on the config
This reverts commit d0427c6fd92d81bcc4a7d60aecfb7c2709559170.

--- a/openvpn/files/client.jinja
+++ b/openvpn/files/client.jinja
@@ -5,6 +5,8 @@ client
 
 {%- if config.dev is defined %}
 dev {{ config.dev }}
+{%- else %}
+dev tun
 {%- endif %}
 
 {%- if config.dev_node is defined %}
